# miniprojekti3-fork-modar

./: .coverage  .coveragerc  .gitignore  .pylintrc  LICENSE  README.md  app.py  book.py  db.py  log.html  output.xml  pyproject.toml  report.html  requirements.txt  retro.md  run_robot_tests.sh  schema.sql
.github/workflows/: main.yml
documents/: tuntikirjanpito.md
src/: .coverage  .coveragerc  AppLibrary.py  app.py  book.py  db.py  delschema.sql  reference.py  report.html  routes.py  schema.sql  test_db.py  viitteet.bib
src/documents/: dod.md  tuntikirjanpito.md
src/static/css/: styles.css
src/templates/: add_references.html  book.html  error.html  index.html  list_references.html
src/tests/: add_reference_and_all_in_the_same_page.robot  book_page_tests.robot  reference_form.robot  reference_tests.robot  reference_to_bitex.robot  references_delete.robot  resource.robot  test_books.py  test_reference.py
templates/: base.html  index.html
