[tool.poetry]
name = "miniprojekti3"
version = "0.1.0"
description = "HY-ohtu-miniprojekti-ryhmä3-syksy2023"
authors = ["mjouppil <markkujouppila@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
flask-bootstrap = "^3.3.7.1"
flask-sqlalchemy = "^3.1.1"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
coverage = "^7.3.2"
robotframework = "^6.1.1"
robotframework-seleniumlibrary = "^6.2.0"
requests = "^2.31.0"
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
